fixed stack overflow: 'while' loop instead of recursion made number display a scrolling tape

--- a/primebox.css
+++ b/primebox.css
@@ -10,12 +10,16 @@ h3 {
   font-size: 2em;
 }
 
-p {
-  font-size: 1.1em;
-  text-align: left;
-  font-family: serif;
-  line-height: 1.5em;
+#primebox-number-tape p {
+  text-align: right;
+  font-family: sans-serif;
+  font-size: 1.0em;
+  margin: 0em;
   color: #808080;
+}
+
+#primebox-number-tape hr {
+  margin: 0px;
 }
 
 div#content {
@@ -29,24 +33,21 @@ div#content {
   position: relative;
   margin: auto;
   width: 220px;
-  height: 150px;
+  height: 250px;
   background-color: #ed6837;
+  border-radius: 8px;
 }
 
 #primebox-number-tape {
-  height: 30px;
+  height: 160px;
   width: 120px;
   position: absolute;
-  top: 60px;
+  top: 50px;
   left: 47px;
   background-color: #ededed;
   border: 1px solid #919191;
-  border-radius: 5px;
-  text-align: right;
-  font-family: sans-serif;
-  font-size: 1.2em;
-  line-height: 30px;
-  padding: 2px
+  padding: 2px;
+  overflow-y: scroll;
 }
 
 
